[project]
name = "ring-gtk"
version = "0.1.0"
description = "Native GTK4 + libadwaita Linux desktop app for Ring home security"
authors = [{ name = "JamesFromFL" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Pure-Python packages — managed by uv
    # Ring API — websocket listener is built-in since 0.8
    "ring-doorbell>=0.8",
    # HTTP session used by ring-doorbell
    "requests>=2.32",
    "aiortc>=1.14.0",
    "Pillow>=10.0",
]
# ---------------------------------------------------------------------------
# Required system packages (Arch Linux) — NOT managed by uv
# Install with: sudo pacman -S python-gobject gtk4 libadwaita libnotify
# Systray (optional): yay -S libayatana-appindicator
#
# These are GObject introspection libraries that must come from pacman.
# Create the venv with system site-packages so `gi` is visible:
#   uv venv --system-site-packages && uv sync
# ---------------------------------------------------------------------------

[project.scripts]
ring-gtk = "ring_gtk.__main__:main"

[project.urls]
Homepage = "https://github.com/JamesFromFL/ring-gtk"
Issues   = "https://github.com/JamesFromFL/ring-gtk/issues"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ring_gtk"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
